--- a/css/styles.css
+++ b/css/styles.css
@@ -283,3 +283,40 @@
 	color: #f16d7f;
 	font-size: 30px;
 }
+
+/*продукция*/
+
+.product {
+	margin-top: 90px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.product-items {
+	margin-bottom: 30px;
+	padding-bottom: 20px;
+}
+
+.product-items:hover {
+	margin-bottom: 30px;
+	padding-bottom: 20px;
+	box-shadow: 0 5px 8px rgba(0, 0, 0, 0.16);
+	background-color: #ffffff;
+}
+
+.product-title {
+	padding-left: 20px;
+	color: #222222;
+	font-size: 13px;
+	font-weight: 400;
+	text-transform: uppercase;	
+}
+
+.product-title-red {
+	padding-left: 20px;
+	color: #f16d7f;
+	font-size: 16px;
+	font-weight: 700;
+	text-transform: uppercase;	
+}
