--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@
 .inpu-header {
 	width: 317px;
 	border: none;
-	padding: 0;
+	padding: 0 10px;
 	font-size: 14px;
 	font-weight: 300;
 	line-height: 32px;
@@ -220,7 +220,7 @@
 
 .slider {
 	background-color: #e8e8e8;;
-	height: 600px;
+	padding: 240px 0;
 	background-image: url(../img/bg.png);
 	background-repeat: no-repeat;
 	background-position: center;
@@ -252,7 +252,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	flex-direction: column;
-	height: 900px;
+	height: 940px;
 }
 
 .category-box{
@@ -286,8 +286,30 @@
 
 /*продукция*/
 
+.product-header {
+	text-align: center;
+}
+
+.product-h2 {
+	margin: 0;
+	color: #222222;
+	font-size: 30px;
+	font-weight: 700;
+	line-height: 54px;
+	letter-spacing: 0.75px;
+}
+
+.product-p {
+	margin: 0;
+	color: #9f9f9f;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 54px;
+	letter-spacing: 0.35px;
+}
+
 .product {
-	margin-top: 90px;
+	margin-top: 55px;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
@@ -319,4 +341,9 @@
 	font-size: 16px;
 	font-weight: 700;
 	text-transform: uppercase;	
+}
+
+.product-btn {
+	text-align: center;
+	padding: 20px;
 }
