--- a/css/styles.css
+++ b/css/styles.css
@@ -347,3 +347,68 @@
 	text-align: center;
 	padding: 20px;
 }
+
+/*_____________*/
+
+.feature {
+	position: relative;
+	margin-top: 90px;
+
+}
+
+.feature-title {
+	margin: 0;
+	position: absolute;
+	top: 140px;
+	left: 60px;
+	color: #ffffff;
+	font-size: 54px;
+	font-weight: 700;
+	text-transform: uppercase;
+	letter-spacing: 1.5px;
+}
+
+.feature-title-red {	
+	color: #f16d7f;
+	letter-spacing: 1.5px;
+}
+
+.feature-title-formen {	
+	font-size: 32px;
+	letter-spacing: 0.9px;
+}
+
+.offer {
+	height: 529px;
+	display:flex;
+	flex-direction: column;
+	justify-content: space-around;
+	background-color: #222224;
+}
+
+.offer-items {
+	display: flex;
+	padding-left: 25px;
+}
+
+.offer-items img {
+	width: 45px;
+	height: 32px;
+}
+
+.offer-items h3 {
+	padding: 0 30px;
+	margin: 0;
+	color: #fbfbfb;
+	font-size: 20px;
+	font-weight: 700;
+	letter-spacing: 0.5px;
+}
+
+.offer-items p {
+	color: #fbfbfb;
+	font-size: 14px;
+	font-weight: 300;
+	line-height: 24px;
+	letter-spacing: 0.35px;	
+}
